# PythonLearing

./: Pipfile  README.md  pyproject.toml
src/: hello.py  test_cet.py  user_session_init.py  user_session_pkg.py
src/API_Python/: Access_API.py  Newton_API.py  SpaceX_API.py  eDart_API.py
src/JSON_Python/: JASON_Python.py  sns_msg_json.py  snsmsg.json  user.json
src/OOP/: Dog_Class.py  Dog_Class_inhiritance.py  Validations_pydantic.py  attr_dataclass.py  pydantic_dataclass.py
src/String_Objects/: split.py  str_index_slice.py
src/Web_Python/: Web_Scraping.py
src/WorkingWithAWS/: RDSConnection_mysqlconnector.py  RDSConnection_pymysql.py  s3_windengine.py
src/append_concat_merge/: append_concat_merge.py
src/best_practices/: caller.py  demo.py
src/dataframes/: DataFrame.py  DataFrame_Create_Options.py  dataframe_dict.py  index_test.py  rename_column.py  test_from_lambda.py
src/logging/: logging_messages.py
src/modules_packages/: mod.py  mod_call_from_func.py  mod_caller1.py  mod_caller2.py  mod_caller3.py  mod_caller_alias_mod.py  mod_caller_alias_variables.py  mod_caller_all.py  mod_caller_error.py
src/pkg/: __init__.py
tests/: test_example.py  test_example_fixture.py  test_example_fixture_autouse.py  test_example_parametrized.py  test_example_parametrized_using_fnc.py  test_markers.py  test_validator.py  test_validator.test_simple.received.txt
