[tool.poetry]
name = "pythonlearing"
version = "0.1.0"
description = "general python learning"
authors = ["Belkada Adam <adam.belkada@edf-re.com>"]

[tool.poetry.dependencies]
python = "~3.7"
pandas = "*"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
